# fastAPI_tryouts

./: README.md  pyproject.toml  setup.cfg
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 276939bde0b6_test.py  651d1210bf7b_token_create.py  b876006e2c360_init.py  fa26d54d7b1a_pwn.py
app/controllers/: tokens.py  users.py
app/models/: core.py  database.py  models.py  schemas.py
app/routes/: items.py  tokens.py  users.py
app/secure/: __init__.py
app/views/: users.py
