[tool.poetry]
name = "fastapi-tryouts"
version = "0.1.0"
description = ""
authors = ["MonkeyBusiness <crimson.oliver@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_tryouts"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.8"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
